FEAT_FIX: rabit + celery publish event

--- a/.env
+++ b/.env
@@ -6,7 +6,10 @@ SECRET_KEY=_h4yjv+uc#3oixvj_m1qv0xj^#@wml5=v13696i9s4juh%%ux=
 # Redis
 # ------------------------------------------------------------------------------
 REDIS_URL=redis://localhost:6379/1
-CELERY_BROKER_URL=redis://localhost:6379
+CELERY_BROKER_URL='amqp://guest:guest@localhost:5672//'
+#CELERY_BROKER_URL = 'amqp://guest:guest@rabbitmq:5672//'
+
+# CELERY_BROKER_URL=redis://localhost:6379
 
 # for using on docker network uncomment these
 #REDIS_URL=redis://redis:6379/1
