--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 amqp==5.2.0
-asarPy==1.0.1
 asgiref==3.7.2
 billiard==4.2.0
 celery==5.4.0
@@ -13,8 +12,10 @@ django-environ==0.10.0
 django-filter==23.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+gunicorn==22.0.0
 kombu==5.3.7
 Markdown==3.4.4
+packaging==24.0
 pika==1.3.2
 prompt-toolkit==3.0.43
 psycopg2-binary==2.9.7
