FIX: sample env

--- a/.env
+++ b/.env
@@ -19,8 +19,8 @@ CELERY_BROKER_URL='amqp://guest:guest@localhost:5672//'
 # PostgreSQL
 # ------------------------------------------------------------------------------
 ENGINE=django.db.backends.postgresql_psycopg2
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+POSTGRES_HOST=postgres_TPC1
+POSTGRES_PORT=5433
 POSTGRES_DB=tpc1
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
