--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ SECRET_KEY=_h4yjv+uc#3oixvj_m1qv0xj^#@wml5=v13696i9s4juh%%ux=
 # Redis
 # ------------------------------------------------------------------------------
 REDIS_URL=redis://localhost:6379/1
-CELERY_BROKER_URL='amqp://guest:guest@localhost:5672//'
-#CELERY_BROKER_URL = 'amqp://guest:guest@rabbitmq:5672//'
+# CELERY_BROKER_URL='amqp://guest:guest@localhost:5672//'
+CELERY_BROKER_URL='amqp://guest:guest@rabbit:5672//'
 
 # CELERY_BROKER_URL=redis://localhost:6379
 
@@ -20,6 +20,7 @@ CELERY_BROKER_URL='amqp://guest:guest@localhost:5672//'
 # ------------------------------------------------------------------------------
 ENGINE=django.db.backends.postgresql_psycopg2
 POSTGRES_HOST=postgres_TPC1
+# POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=tpc1
 POSTGRES_USER=postgres
